# property-maintenance-priority-model

./: .gitignore  DATA_SOURCES.md  Dockerfile  README.md  model_card.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
artifacts/: maintenance_priority_model.json
data/: README.md  synthetic_work_orders.csv
notebooks/: 01_nyc_311_priority_modeling.ipynb  nyc_311_priority_modeling.ipynb
outputs/: market_rent_recommendations.csv
scripts/: analyze_market.py  download_data.py  predict.py  score_subject.py  train_priority_model.py
src/: explainability.py  tables.py  visuals.py
src/maintenance_priority/: __init__.py  features.py  inference.py  maps.py  metrics.py  model.py  tables.py  visuals.py
src/maintenance_priority/market_comp/: __init__.py  analysis.py  pipeline.py  scoring.py
tests/: test_priority_model.py
