[project]
name = "property-maintenance-priority-model"
version = "0.1.0"
description = "Maintenance priority classifier for property-management analytics using synthetic data."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
