[project]
name = "property-maintenance-priority-model"
version = "0.1.0"
description = "Maintenance priority classifier and analytics dashboard for property-management operations."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "plotly>=5.20",
  "scikit-learn>=1.3",
  "shap>=0.45",
  "streamlit>=1.35",
]

[tool.setuptools.packages.find]
where = ["src"]
